@@ -650,7 +650,7 @@ static void iconv_help(void)
 	char *charmap = strdup(nl_langinfo(CODESET));
 	setlocale(LC_CTYPE, old);
 	free(old);
-	fprintf(stderr,
+	printf(
 "    -o from_code=CHARSET   original encoding of file names (default: UTF-8)\n"
 "    -o to_code=CHARSET	    new encoding of the file names (default: %s)\n",
 		charmap);
