@@ -1158,16 +1158,15 @@ static int send_fd(int sock_fd, int fd)
 
 static void usage(void)
 {
-	fprintf(stderr,
-		"%s: [options] mountpoint\n"
-		"Options:\n"
-		" -h		    print help\n"
-		" -V		    print version\n"
-		" -o opt[,opt...]   mount options\n"
-		" -u		    unmount\n"
-		" -q		    quiet\n"
-		" -z		    lazy unmount\n",
-		progname);
+	printf("%s: [options] mountpoint\n"
+	       "Options:\n"
+	       " -h		    print help\n"
+	       " -V		    print version\n"
+	       " -o opt[,opt...]   mount options\n"
+	       " -u		    unmount\n"
+	       " -q		    quiet\n"
+	       " -z		    lazy unmount\n",
+	       progname);
 	exit(1);
 }
 
